Kustomize/resources/pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pgadmin
  name: pgadmin
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - env:
            - name: PGADMIN_DEFAULT_EMAIL
              value: admin@admin.com
            - name: PGADMIN_DEFAULT_PASSWORD
              value: root
          image: dpage/pgadmin4
          name: pgadmin
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}    
      restartPolicy: Always
